# MLOps-hotel-reservation-prediction-system

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  input_request_data_simulation.py  main.py  prometheus.yml  pyproject.toml  run.sh  template.py
.github/workflows/: ci_cd.yaml
feature_store/: feature_store.yaml  hotel_features.py
notebooks/: eda.ipynb  scratchpad.ipynb  test.ipynb
src/: app.py  request.py  run_pipelines.py
src/components/: data_ingestion.py  data_validation.py  data_validation_improved.py  feature_engineering.py  model_training.py  model_tuning.py  model_validation.py
src/entity/: config_entity.py  constants.py
src/pipeline/: data_ingestion.py  data_ingestion_pipeline.py  feature_engineering.py  feature_engineering_pipeline.py  inference_pipeline.py  training_model_pipeline.py
src/tests/: conftest.py  test_data_ingestion.py  test_feature_engineering.py
src/utils/: feature_utils.py  main_utils.py  model_retriain_utils.py
