[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-hotel-reservation-prediction-system"
version = "0.1.0"
authors = [{ name = "Thobela Sixpence", email = "thobela.sixpence@gmail.com" }]
description = "This project is a machine learning system for predicting hotel reservation cancellations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "zenml>=0.75.0",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "feast>=0.46.0",
    "fastapi>=0.110.0",
    "mlflow>=2.20.3",
    "cloudpickle==2.2.1",
    "pytest-xdist>=3.6.1",
    "pytest-cov>=6.0.0",
    "pytest-instafail>=0.5.0",
    "pytest-randomly>=3.16.0",
    "pre_commit>=4.2.0",
    "loguru>=0.7.3",
    "pydantic>=2.8.2",
    "uvicorn>=0.34.0",
    "setuptools-scm>=8.2.0",
    "requests>=2.23.3",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
    "matplotlib>=3.10.1",
]

[project.optional-dependencies]
dev = ["ruff==0.4.4", "setuptools_scm>=8.2.0"]

[tool.setuptools_scm]
write_to = "_version.py"
version_scheme = "release-branch-semver"

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "I", "C", "B"]
lint.ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.bandit]
exclude_dirs = ["src/tests", "docs", "build", "dist", "venv", ".venv"]
skips = ["B101"]

[tool.mypy]
strict = true
ignore_missing_imports = true
